tests/errors/preasm_errors/endmcr_outside_def/outside_def.as
; endmcr outside of a macro definition
mcr mymcr
mov r1, r2
endmcr

; outside of a macro
endmcr